--- a/themes/beautifulhugo/layouts/_default/baseof.html
+++ b/themes/beautifulhugo/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 <html lang="{{ .Lang }}" itemscope itemtype="http://schema.org/WebPage">
   <head>
     {{ partial "head.html" . }}
+    {{- partial "gtag" . -}}
   </head>
   <body>
     {{ partial "nav.html" . }}
